--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Magic Eightball</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+<div class="container"></div>
 </body>
 </html>
