Created the eight circle identifier

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Magic Eightball</title>
 </head>
 <body>
-<div class="container"></div>
+<div class="container">
+    <div class="number">8</div>
+</div>
+
 </body>
 </html>
