--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 <div class="container">
     <div class="number">8</div>
+    <form>
+        <input type="text" placeholder="Ask any question...">
+    </form>
 </div>
 
 </body>
