Created blue answer circle

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <form>
         <input type="text" placeholder="Ask any question...">
     </form>
+    <div class="answer"></div>
 </div>
 
 </body>
