--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <div class="container">
     <div class="number">8</div>
     <form>
-        <input type="text" placeholder="Ask any question...">
+        <input class ="click-enter" onsubmit="submit" type="text" placeholder="Ask any question...">
     </form>
     <div class="answer"></div>
+   <button class="resetbtn"></button>
 </div>
 
 </body>
